<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_e3e3e3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/jpush_message_title"
            android:textColor="@color/color_333333"
            android:textSize="22sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/message_type_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/jpush_message_type"
        android:textColor="@color/color_333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/message_type_value_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/message_type_view"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/message_type_view"
        android:textColor="@color/color_333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/message_content_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/message_type_view"
        android:layout_below="@id/message_type_view"
        android:layout_marginTop="20dp"
        android:text="@string/jpush_message_content"
        android:textColor="@color/color_333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/message_content_value_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/message_content_view"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/message_content_view"
        android:textColor="@color/color_333333"
        android:textSize="20sp" />
</RelativeLayout>
