<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_e3e3e3"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/message"
            android:textColor="@color/color_333333"
            android:textSize="22sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_message_unread"
            />

        <TextView
            android:id="@+id/unread_tip_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toLeftOf="@+id/unread_message_view"
            android:background="@drawable/bg_message_tip"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/unread_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/message_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/message_view"
            android:text="@string/unread_message"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tip_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/message_view"
            android:layout_alignLeft="@id/unread_message_view"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/message_view"
            android:text="@string/unread_message_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />

    <RelativeLayout
        android:id="@+id/zan_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/zan_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_message_zan"
            />

        <TextView
            android:id="@+id/zan_tip_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toLeftOf="@+id/zan_message_view"
            android:background="@drawable/bg_message_tip"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/zan_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/zan_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/zan_view"
            android:text="@string/zan_message"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/zan_message_info_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/zan_view"
            android:layout_alignLeft="@id/zan_message_view"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/zan_message_view"
            android:text="@string/zan_message_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />

    <RelativeLayout
        android:id="@+id/imooc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imooc_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_message_imooc"
            />

        <TextView
            android:id="@+id/tip_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toLeftOf="@+id/imooc_message_view"
            android:background="@drawable/bg_message_tip"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/imooc_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imooc_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/imooc_view"
            android:text="@string/imooc_message"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tip_imooc_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imooc_view"
            android:layout_alignLeft="@id/imooc_message_view"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imooc_view"
            android:text="@string/imooc_message_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />
</LinearLayout>
