<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
    >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/default_user_avatar"
        />

        <TextView
            android:id="@+id/login_info_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/photo_view"
            android:text="@string/unlogin"
            android:textColor="@color/color_333333"
            android:textSize="13sp"
        />

        <TextView
            android:id="@+id/login_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@color/color_fed952"
            android:padding="10dp"
            android:text="@string/login_now"
            android:textColor="@color/color_333333"
            android:textSize="16sp"
        />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logined_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="15dp"
        android:visibility="gone"
    >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/default_user_avatar"
        />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
        >
            <TextView
                android:id="@+id/username_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="tyt114"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
            />
            <TextView
                android:id="@+id/tick_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_view"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:text="tyt114"
                android:textColor="@color/color_cdcdcd"
                android:textSize="13sp"
            />
        </RelativeLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_cccccc"
    />

    <TextView
        android:id="@+id/video_setting_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/video_play_setting"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
    />

    <TextView
        android:id="@+id/share_imooc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/share_imooc"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />

    <TextView
        android:id="@+id/my_qrcode_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/my_qrcode"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
    />
    <TextView
        android:id="@+id/update_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/update_info"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cdcdcd"
    />
</LinearLayout>